Video: Fixed excessive gap between video and a preceding element

--- a/source/sass/components/@health/_health-video.scss
+++ b/source/sass/components/@health/_health-video.scss
@@ -7,7 +7,7 @@
 .health-video {
 
   * + & {
-    @include AU-space(margin-top, 3unit);
+    @include AU-space(margin-top, 1.5unit);
   }
 
   &__preview {
